Agregada la función de carrito

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos.html
@@ -9,7 +9,8 @@ listado de libros en venta:<br>
 		<div>
 			titulo: {{titulo}} <br>
 			precio: {{precio}} <br>
-			<a href="#" id_producto="{{id}}" class="enlace_detalles" >ver detalles</a> 
+			<a href="#" id_producto="{{id}}" class="enlace_detalles" >ver detalles</a> <br>
+			<input type="number" id="input-cantidad-{{id}}" value="1"/>
 			<a href="#" id_producto="{{id}}" class="enlace_comprar" >comprar producto</a>
 		</div>
 		
