--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/login.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/login.html
@@ -3,8 +3,8 @@
 
 <form id="form_login">
 	
-	email: <input type="email" id="email"/> <br>
-	pass: <input type="password" id="pass"/> <br>
+	email: <input type="email" id="email" value="lechu@gmail.com"/> <br>
+	pass: <input type="password" id="pass" value="123"/> <br>
 	<input type="checkbox"/> recordar datos (por hacer...)<br>
 	<input type="submit" value="Identificarme"/>
 	
