Implementación: Editar foto libro, paginación administración primera parte.

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos.html
@@ -4,7 +4,7 @@ listado de libros en venta:<br>
 	<div style="margin: 20px;">
 		
 		<div>
-			<img src="subidas/{{id}}.jpg" style="height: 80px"/>
+			<img src="subidas/{{id}}.jpgtoken={fechaImagenPortada1}" style="height: 80px"/>
 		</div>
 		<div>
 			titulo: {{titulo}} <br>
