--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/registrarme.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/registrarme.html
@@ -2,9 +2,11 @@ introduce tus datos para registrarte en la tienda:
 
 <form id="form_registro_usuario">
 
-nombre: <input type="text" id="nombre"/> <br/>
-pass: <input type="password" id="pass"/> <br/>
-email: <input type="email" id="email"/> <br/>
+nombre: <input type="text" name="nombre" id="nombre"/> <br/>
+pass: <input type="password" name="pass" id="pass"/> <br/>
+email: <input type="email" name="email" id="email"/> <br/>
+
+Foto Perfil (opcional): <input type="file" name="foto" id="foto"/> <br> 
 
 <input type="submit" value="Registrarme"/>
 
