Integración paginación - Cliente

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos_buscador_paginacion.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/productos_buscador_paginacion.html
@@ -4,3 +4,8 @@ listado de libros en venta:<br>
 	Buscardor: <br>
 	Titulo: <input id="buscador_titulo" type="text" />
 </div>
+
+<div>
+	<a href="#" id="enlace_anterior" comienzo="">Anterior</a>
+	<a href="#" id="enlace_siguiente" comienzo="">Siguiente</a>
+</div>
