--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/checkout_1.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/checkout_1.html
@@ -1,11 +1,10 @@
+
 <div>REALIZAR PEDIDO - PASO 1</div>
 
-<div>INTRODUCE LOS DATOS DE ENVIO</div>
-
-Nombre completo: <input type="text" id="campo_nombre" /> <br>
-Dirección: <input type="text" id="campo_direccion" /> <br>
-Provincia: <input type="text" id="campo_provincia" /> <br>
+<div>introduce los datos de envio</div>
+nombre completo: <input type="text" id="campo_nombre" /> <br>
+direccion: <input type="text" id="campo_direccion" /> <br>
+provincia: <input type="text" id="campo_provincia" /> <br>
 
 <br>
-
-<button style="padding: 10px; margin-left: 100px;" id="aceptar_paso_1">ACEPTAR</button>
+<button style="padding: 10px;margin-left: 100px;" id="aceptar_paso_1">ACEPTAR</button>
