test más cambios

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/productos.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/productos.html
@@ -1,4 +1,4 @@
-Books on sale:<br>
+books on sale:<br>
 
 {{#.}}
 	<div style="margin: 20px;">
@@ -7,11 +7,11 @@ Books on sale:<br>
 			<img src="subidas/{{id}}.jpg" style="height: 80px"/>
 		</div>
 		<div>
-			Title: {{titulo}} <br>
-			Price: {{precio}} <br>
-			<a href="#" id_producto="{{id}}" class="enlace_detalles" >View Details</a> <br>
-			<input type="number" id="input-cantidad-{{id}}" value="1"/>
-			<a href="#" id_producto="{{id}}" class="enlace_comprar" >Add to cart</a>
+			title: {{titulo}} <br>
+			price: {{precio}} <br>
+			<a href="#" id_producto="{{id}}" class="enlace_detalles" >details</a> <br/>
+			<input type="number" id="input-cantidad-{{id}}" value="1"  />
+			<a href="#" id_producto="{{id}}" class="enlace_comprar" >add to cart</a>
 		</div>
 		
 	</div>
