--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/checkout_2.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/checkout_2.html
@@ -1,14 +1,13 @@
+
 <div>REALIZAR PEDIDO - PASO 2</div>
 
-<div>INTRODUCE LOS DATOS DE PAGO</div>
+<div>introduce los datos de pago</div>
+<div>(no introducir datos reales, proyecto en desarrollo)</div>
 
 <div>
-    Titular tarjeta: <input type="text" id="titular_tarjeta" /> <br>
-    Número de Tarjeta: <input type="text" id="numero_tarjeta" /> <br>
+    titular tarjeta: <input type="text" id="titular_tarjeta"/> <br/>
+    numero tarjeta: <input type="text" id="numero_tarjeta"/> <br/>
 </div>
 
-
-
 <br>
-
-<button style="padding: 10px; margin-left: 100px;" id="aceptar_paso_2">ACEPTAR</button>
+<button style="padding: 10px;margin-left: 100px;" id="aceptar_paso_2">ACEPTAR</button>
