--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/checkout_3.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas_en/checkout_3.html
@@ -1,35 +1,30 @@
-<div>REALIZAR PEDIDO - PASO 3</div>
-
-<div>RESUMEN DEL PEDIDO</div>
+<div>REALIZAR - PEDIDO PASO 3</div>
+<div>resumen del pedido:</div>
 
 {{#libros}}
-
     <div style="margin: 10px;">
-        Título: {{titulo}} <br>
-        <img style="height: 60px;" src="subidas/{{libro_id}}.jpg"> <br>
-        Cantidad: {{cantidad}} <br>
-        Precio/u: {{precio}}
+        titulo: {{titulo}} <br>
+        <img style="height: 60px;" src="subidas/{{libro_id}}.jpg"/> <br>
+        cantidad: {{cantidad}} <br>
+        precio/unidad: {{precio}}
     </div>
-
 {{/libros}}
 
-
-<div>DATOS DE ENVIO</div>
-
+<div> datos de envio:</div>
 <div style="margin: 10px;">
-    Nombre Completo: {{nombreCompleto}} <br>
-    Dirección: {{direccion}} <br>
-    Provincia: {{provincia}} <br>
+    nombre completo : {{nombreCompleto}} <br>
+    direccion: {{direccion}} <br>
+    provincia: {{provincia}} <br>
 </div>
 
-<div>DATOS DE PAGO</div>
-
+<div>datos de pago:</div>
 <div style="margin: 10px;">
-    Titular Tarjeta: {{titularTarjeta}} <br>
-    Número Tarjeta: {{numeroTarjeta}} <br>
+    titular tarjeta: {{titularTarjeta}} <br>
+    numero tarjeta: {{numeroTarjeta}} <br>
 </div>
-
 
 <div>
-    <button style="margin: 10px;padding: 10px;" id="botton_confirmar_pedido"> CONFIRMAR PEDIDO </button>
+    <button style="margin: 10px;padding: 10px;" id="boton_confirmar_pedido">
+    CONFIRMAR PEDIDO
+    </button>
 </div>
