Integración de cookies - usuario y validaciones - nivel modelo

--- a/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/login.html
+++ b/22_tienda_cliente_identificacion_usuario/src/main/webapp/plantillas/login.html
@@ -3,9 +3,9 @@
 
 <form id="form_login">
 	
-	email: <input type="email" id="email" value="lechu@gmail.com"/> <br>
-	pass: <input type="password" id="pass" value="123"/> <br>
-	<input type="checkbox"/> recordar datos (por hacer...)<br>
+	email: <input type="email" id="email" /> <br>
+	pass: <input type="password" id="pass"/> <br>
+	<input id="recordar_datos" checked type="checkbox"/> Recordar Datos <br>
 	<input type="submit" value="Identificarme"/>
 	
 </form>
